--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "name": "node-api",
     "main": "server.js",
     "dependencies": {
+        "actions-on-google": "^2.1.3",
         "body-parser": "~1.0.1",
+        "dialogflow-fulfillment": "^0.5.0",
         "express": "~4.16.3",
         "express-generator": "^4.16.0",
         "mongoose": "~5.2.4",
-        "actions-on-google": "^2.1.3",
-        "dialogflow-fulfillment": "^1.0.0"
+        "request": "^2.87.0"
     }
 }
